testsuite/tests/checks/slices/test.out
slices.adb:2:20: error: slice
2 |    Tmp : String := S (L .. R);        --  FLAG
  |                    ^^^^^^^^^^ 

